# Cargo manifest for the mylib Rust FFI example.
#
#   cargo run   # builds against the FFI library in nimlib/build/
#
# The generated wrapper crate is included as a module via #[path].

[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
# The generated wrapper (included via #[path]) bridges async responses to a
# tokio oneshot; the example drives `<method>_async().await` on a tokio runtime.
tokio = { version = "1", features = ["rt", "sync", "macros"] }

[[bin]]
name = "rust_example"
path = "src/main.rs"
