# Cargo manifest for the mylib Rust FFI example.
#
#   cargo run   # builds against the FFI library in nimlib/build/
#
# The generated wrapper crate is included as a module via #[path].

[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
# The generated wrapper needs only futures-channel (runtime-agnostic oneshot).
futures-channel = "0.3"
# The example demonstrates BOTH: driving `<method>_async().await` on a tokio
# runtime, and on futures' minimal block_on executor (no tokio involved) —
# proving the generated crate does not force a runtime on consumers.
tokio = { version = "1", features = ["rt", "sync", "macros"] }
futures = "0.3"

[[bin]]
name = "rust_example"
path = "src/main.rs"
