# Cargo manifest for the torpedo Rust FFI example.
#
# Drives the same `torpedolib` shared library that the C++ and Python
# examples consume. Two build modes are supported via Cargo features:
#
#   cargo run                 # native FFI build  (uses nimlib/build/)
#   cargo run --features cbor # CBOR FFI build    (uses nimlib/build_cbor/)

[package]
name = "torpedo_rust_example"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = []
cbor = ["dep:ciborium", "dep:serde", "dep:serde_json", "dep:serde_bytes"]

[dependencies]
ciborium = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_bytes = { version = "0.11", optional = true }

[[bin]]
name = "torpedo_rust_example"
path = "src/main.rs"
