# Cargo manifest for the torpedo Rust FFI example.
#
#   cargo run   # builds against the CBOR FFI library in nimlib/build_cbor/

[package]
name = "torpedo_rust_example"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"

[[bin]]
name = "torpedo_rust_example"
path = "src/main.rs"
