# Cargo manifest for the Rust parity test against typemappingtestlib.
#
# Mirrors test_typemappingtestlib.{cpp,py}: verifies the Rust wrapper
# correctly handles the full Nim → Rust type matrix the codegen supports.
#
#   cargo run   # builds against the FFI library in build/

[package]
name = "typemappingtestlib_rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"

[[bin]]
name = "test_typemappingtestlib_rust"
path = "src/main.rs"
